<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="leslie_music">余音绕梁</string>

    <!-- actionbar -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_equlizer">Equlizer</string>
    <string name="action_exit">Exit</string>
    <string name="mine">mine</string>
    <string name="explore">explore</string>
    <string name="video">video</string>

    <!--splash-->
    <string name="copyright_leslie">Copyright@Leslie</string>

    <!--mini play-->
    <string name="blind_mode_play">play</string>
    <string name="blind_mode_next">next</string>

    <!-- music main-->
    <string name="my_favorite">Favorites</string>
    <string name="recently_play">Recent</string>
    <string name="my_playlist">My playlists</string>
    <string name="shuffle">Shuffle</string>
    <string name="local_music">Local Music</string>
    <string name="local_empty_text">Local music will be shown here</string>
    <string name="local_music_no_data">No Data</string>
</resources>
