<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:leslie="http://schemas.android.com/apk/res/com.leslie.musicplayer"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.mainpage.MusicPlayMainActivity">

    <!--状态栏-->
    <View
        android:id="@+id/view_status"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_above="@id/app_toolbar"
        android:background="@color/colorPrimary"
        android:visibility="gone"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0.0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarStyle">

        <FrameLayout
            android:id="@+id/ll_title_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/iv_title_menu"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/titlebar_menu"/>
        </FrameLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/space_24"
                android:paddingEnd="@dimen/space_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:theme="@style/AppTheme">

                <com.leslie.musicplayer.widget.AutoChangeTextView
                    android:id="@+id/tv_title_one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/mine"
                    android:textColor="@color/tv_color_selector"
                    android:textSize="@dimen/text_size_16.67"
                    leslie:selectedSize="@dimen/text_size_18.67"
                    leslie:unSelectedSize="@dimen/text_size_16.67"/>

                <com.leslie.musicplayer.widget.AutoChangeTextView
                    android:id="@+id/tv_title_two"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_24"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/explore"
                    android:textColor="@color/tv_color_selector"
                    android:textSize="@dimen/text_size_16.67"
                    leslie:selectedSize="@dimen/text_size_18.67"
                    leslie:unSelectedSize="@dimen/text_size_16.67"/>

                <com.leslie.musicplayer.widget.AutoChangeTextView
                    android:id="@+id/tv_title_three"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/space_24"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/video"
                    android:textColor="@color/tv_color_selector"
                    android:textSize="@dimen/text_size_16.67"
                    leslie:selectedSize="@dimen/text_size_18.67"
                    leslie:unSelectedSize="@dimen/text_size_16.67"/>
            </LinearLayout>

        </HorizontalScrollView>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_toolbar"
        android:descendantFocusability="blocksDescendants"/>

    <FrameLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/minifragment_height"
        android:layout_alignParentBottom="true"
        android:background="@color/white_80"/>
</RelativeLayout>