<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="showView"
                  type="boolean"/>
    </data>
    <RelativeLayout
        android:id="@+id/number_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="ContentDescription">

        <LinearLayout
            android:id="@+id/num_area"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:id="@+id/favorite_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/item_background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableTop="@drawable/my_icon_favorites"
                    android:drawablePadding="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/my_favorite"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_middle_textsize"/>

                <TextView
                    android:id="@+id/favorite_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black_40"
                    android:textSize="@dimen/common_small_textsize"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recent_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/item_background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableTop="@drawable/my_icon_recent_play"
                    android:drawablePadding="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/recently_play"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_middle_textsize"/>

                <TextView
                    android:id="@+id/recent_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black_40"
                    android:textSize="@dimen/common_small_textsize"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/play_list_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/item_background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableTop="@drawable/my_icon_play_list"
                    android:drawablePadding="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/my_playlist"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_middle_textsize"/>

                <TextView
                    android:id="@+id/play_list_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black_40"
                    android:textSize="@dimen/common_small_textsize"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/header_line"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_below="@id/num_area"
            android:background="@color/black_5"/>
    </RelativeLayout>
</layout>